erDiagram
    PESSOA ||--o| FUNCIONARIO : "pode ser"
    FUNCIONARIO ||--|{ FUNCIONARIO : gerencia
    PESSOA ||--o{ DEPENDENTE : relacionada
    FUNCIONARIO ||--o{ ALOCACAO : participa
    PROJETO ||--o{ ALOCACAO : possui
    ALOCACAO ||--o{ EQUIPAMENTO : utiliza

    PESSOA {
        int id PK
        string nome
        string cpf UK
        date data_nascimento
        string sexo
        string email
        string telefone
        string endereco
        string cidade
        string estado
        string cep
        datetime criado_em
        datetime atualizado_em
    }

    FUNCIONARIO {
        int id PK
        int pessoa_id FK
        int supervisor_id FK
        string cargo
        decimal salario
        date data_admissao
        string matricula UK
        string departamento
        boolean ativo
    }

    DEPENDENTE {
        int id PK
        int pessoa_id FK
        int funcionario_id FK
        string parentesco
    }

    PROJETO {
        int id PK
        string nome_projeto
        text descricao
        date data_inicio
        date data_fim
    }

    ALOCACAO {
        int id PK
        int funcionario_id FK
        int projeto_id FK
        date data_alocacao
        int carga_horaria
    }

    EQUIPAMENTO {
        int id PK
        string nome_equipamento
        string patrimonio
        string tipo
        int alocacao_id FK
    }